@@ -8,7 +8,7 @@
  *   pqxx::result represents the set of result tuples from a database query
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/result instead.
  *
- * Copyright (c) 2001-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -809,7 +809,7 @@ public:
 	{ return tuple(this, i); }
   const tuple at(size_type) const throw (range_error);			//[t10]
 
-  void clear() throw () { super::clear(); m_data = 0; }			//[t20]
+  void clear() throw () { super::reset(); m_data = 0; }			//[t20]
 
   /**
    * @name Column information
